# usports-basketball

./: .gitignore  .pylintrc  CHANGELOG.md  README.md  a.py  old.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
test/: test.py  test_data.py
tests/: test_data.py  test_players_stats.py  test_team_stats.py
usports_basketball/: __init__.py  constants.py  player_stats.py  team_stats.py
usports_basketball/player_stats/: __init__.py  player_settings.py
usports_basketball/player_stats/data_fetching/: __init__.py  fetch_player_stats.py
usports_basketball/player_stats/data_processing/: __init__.py  players_df.py
usports_basketball/team_stats/: __init__.py  team_settings.py
usports_basketball/team_stats/data_fetching/: __init__.py  fetch_standings_data.py  fetch_team_stats.py
usports_basketball/team_stats/data_processing/: standings.py  team_stats.py
usports_basketball/utils/: __init__.py  headers.py  helpers.py  logging_config.py  player_data_parsing.py  team_data_parsing.py
usportsbball2/: main.py  team_stats.py
usportsbball2/player_stats/: __init__.py
usportsbball2/player_stats/data_fetching/: fetch_player_stats.py
usportsbball2/player_stats/settings/: player_settings.py
usportsbball2/team_stats/: __init__.py  standings.py  team_stats.py  utils.py  values.py
usportsbball2/team_stats/data_fetching/: __init__.py  fetch_standings_data.py  fetch_team_stats.py
usportsbball2/team_stats/data_processing/: __init__.py  standings.py  team_stats.py
usportsbball2/team_stats/settings/: team_settings.py
usportsbball2/team_stats/utils/: __init__.py  data_processing.py  parsing.py  type_conversion.py
usportsbball2/utils/: __init__.py  helpers.py  team_data_parsing.py
